[gd_scene load_steps=10 format=3 uid="uid://b7pdbhyuurbn5"]

[ext_resource type="Theme" uid="uid://bytiyxp3n1j8y" path="res://assets/default_theme.tres" id="1_422go"]
[ext_resource type="Script" path="res://ui/battle_menu.gd" id="2_gnu56"]
[ext_resource type="Texture2D" uid="uid://c7jag05hq26t1" path="res://assets/sprites/BattleMenuEdge.png" id="2_vgqn4"]
[ext_resource type="Texture2D" uid="uid://cwpt352fafuij" path="res://assets/sprites/ActionUI.png" id="3_su71f"]
[ext_resource type="Texture2D" uid="uid://j84eyy5bri8i" path="res://assets/sprites/ActionUIHover.png" id="4_w1dh2"]
[ext_resource type="Texture2D" uid="uid://6boywb1afcnl" path="res://assets/sprites/ItemUI.png" id="5_v6vle"]
[ext_resource type="Texture2D" uid="uid://bvsqn385dru88" path="res://assets/sprites/ItemUIHover.png" id="6_qo71j"]
[ext_resource type="Texture2D" uid="uid://cgl25y8iatrhc" path="res://assets/sprites/RunUI.png" id="7_uemqy"]
[ext_resource type="Texture2D" uid="uid://hcktcqaxgwtf" path="res://assets/sprites/RunUIHover.png" id="8_houva"]

[node name="BattleMenu" type="HBoxContainer"]
custom_minimum_size = Vector2(184, 24)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -30.0
offset_right = 92.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_422go")
theme_override_constants/separation = 0
script = ExtResource("2_gnu56")

[node name="LeftEdge" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_vgqn4")
stretch_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ActionButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_su71f")
texture_pressed = ExtResource("3_su71f")
texture_hover = ExtResource("4_w1dh2")
texture_focused = ExtResource("4_w1dh2")
stretch_mode = 3

[node name="ItemButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_v6vle")
texture_pressed = ExtResource("5_v6vle")
texture_hover = ExtResource("6_qo71j")
texture_focused = ExtResource("6_qo71j")
stretch_mode = 3

[node name="RunButton" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_uemqy")
texture_pressed = ExtResource("7_uemqy")
texture_hover = ExtResource("8_houva")
texture_focused = ExtResource("8_houva")
stretch_mode = 3

[node name="RightEdge" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_vgqn4")
stretch_mode = 3
flip_h = true

[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ActionButton" to="." method="_on_action_button_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/ItemButton" to="." method="_on_item_button_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/HBoxContainer/RunButton" to="." method="_on_run_button_button_down"]
